# supertux

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  azure-pipeline.yml  supertuxRuleset (copy).ruleset  supertuxRuleset.ruleset  vcpkg-x64-linux.txt  vcpkg-x64-osx.txt  vcpkg-x86-windows.txt
src/object/: gameplatform.hpp
tests/: CMakeLists.txt  file_system_test.cpp  platform_search.cpp  platform_search.h  platform_test.cpp
